# rust_chatgpt_apiw

./: CHANGELOG.md  Cargo.toml  README.md
src/: datas.rs  lib.rs  netreq.rs  res_format.rs
src/datas/: request.rs  response.rs
src/netreq/: perform.rs
