[package]
name = "rust_chatgpt_apiw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
reqwest = { version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tokio = "1.25.0"
tokio-test = "0.4.2"
