[package]
name = "xtgptr"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
futures = "0.3.26"
reqwest = { version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
serde_with = "2.2.0"
tokio = "1.25.0"

[dev-dependencies]
serde_test = "1.0.152"
tokio-test = "0.4.2"
